# RTXX-CUDA

./: CMakeLists.txt  README.md  benchmark_plot.py  benchmark_results.txt  computation_graph_visualisation.html  definitions.md  gpu_info.txt  run_benchmarks.sh
src/: ata.cpp  ata.h  fused_kernels.cu  rtxx.cpp  rtxx.h  test_matrix_ops.cpp
